tests/typing/bad/testfile-instance-3.scala

class C[U, V <: U] {}
class Test { def m(x: C[Int, Boolean]) {} }
object Main { def main(args: Array[String]) { } }
